dev/us-east-2/services/system/jenkins/templates/custom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
    - host: "jenkins.santosops.com"
      http:
        paths:
          - backend:
              service:
                name: "jenkins"
                port:
                  name: "http"
            pathType: "Prefix"
            path: "/"
  tls:
    - hosts:
        - "jenkins.santosops.com"
      secretName: "santos-ops"
